# endweave

./: CHANGELOG.md  CLAUDE.md  pyproject.toml
src/endstone_endweave/: _version.py  config.toml  pipeline.py  plugin.py
src/endstone_endweave/codec/: __init__.py  reader.py  writer.py
src/endstone_endweave/codec/types/: __init__.py  attribute_layer.py  biome.py  commands.py  crafting.py  enums.py  primitives.py
src/endstone_endweave/protocol/: base.py  versions.py
src/endstone_endweave/protocol/v860_to_v898/: protocol.py
src/endstone_endweave/protocol/v860_to_v898/handlers/: animate.py  text.py
src/endstone_endweave/protocol/v898_to_v860/: protocol.py
src/endstone_endweave/protocol/v898_to_v860/handlers/: text.py
src/endstone_endweave/protocol/v898_to_v924/: protocol.py
src/endstone_endweave/protocol/v924_to_v898/: protocol.py
src/endstone_endweave/protocol/v924_to_v898/handlers/: text.py
src/endstone_endweave/protocol/v924_to_v944/: protocol.py
src/endstone_endweave/protocol/v924_to_v944/handlers/: block_pos.py
src/endstone_endweave/protocol/v944_to_v924/: protocol.py
src/endstone_endweave/protocol/v944_to_v924/handlers/: block_pos.py
src/endstone_endweave/protocol/v944_to_v975/: protocol.py
src/endstone_endweave/protocol/v944_to_v975/handlers/: actor_event.py  clientbound_attribute_layer_sync.py  crafting_data.py  item_stack.py  locator_bar.py  party_changed.py  player_enchant_options.py
src/endstone_endweave/protocol/v975_to_v1001/: __init__.py  protocol.py
src/endstone_endweave/protocol/v975_to_v1001/handlers/: __init__.py  available_commands.py  biome_definition_list.py  boss_event.py  client_cache_blob_status.py  diagnostics.py  inventory_transaction.py  item_stack.py  level_chunk.py  level_sound_event.py  sound_event_map.py  start_game.py  sub_chunk_request.py
tests/: builders.py  conftest.py  test_codec.py
tests/codec/: test_block_pos.py  test_game_rules.py  test_item_instance.py  test_nbt.py  test_primitives.py  test_reader.py  test_recipes.py  test_string.py  test_varint.py  test_wrapper.py
tests/connection/: test_storage.py
tests/debug/: test_debug_handler.py
tests/pipeline/: conftest.py  test_chain_execution.py  test_error_handling.py  test_routing.py
tests/protocol/: test_base.py  test_manager.py  test_versions.py
tests/protocol/handlers/: test_client_movement_prediction_sync.py
tests/rewriter/: test_sound_remap.py  test_sound_rewriter.py
