[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-endweave"
version = "0.4.18"
description = "Protocol translation plugin for Endstone - 1.26.30 (v1001): full chunk fix - LevelChunk(58) Limited(-2)->Limitless(-1) so the client requests the full column instead of clipping top sub-chunks to air. Diagnostics (render-heightmap strip, cache-off, capture) removed. 1.21.120 - 1.26.30 supported."
requires-python = ">=3.10"
dependencies = []

[project.entry-points.endstone]
endweave = "endstone_endweave:EndweavePlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_endweave"]

[tool.hatch.build.targets.wheel.force-include]
"src/endstone_endweave/config.toml" = "endstone_endweave/config.toml"
